basic setup for rero lab

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         </div>
     </main>
 
-    <section class="hidden grid grid-cols-2 gap-5 h-[100vh]" id="code-area">
+    <section class="grid grid-cols-2 gap-5 h-[100vh]" id="code-area">
         <!-- <div class="w-full h-full relative parent">
             <div class="h-full w-full" id="editor"></div>
             <div class="bg-[#2AA56C] flex justify-start items-center px-10">
@@ -62,11 +62,6 @@
     <script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
     <script src="https://vjs.zencdn.net/7.2.3/video.js"></script>
-
-    <script>
-        let player = videojs('hls-example');
-        player.play();
-    </script>
 </body>
 </html>
 
